fix footer alignments

--- a/src/App.css
+++ b/src/App.css
@@ -890,3 +890,15 @@ background: linear-gradient(to top, #2c3e50, #2980b9); /* W3C, IE 10+/ Edge, Fir
     font-weight:600
   }
 }
+
+footer{
+  margin-top: 30px;
+  /* padding-bottom: 20px; */
+  text-align: center
+}
+  
+p.copyright-text{
+  padding-top: 12px;
+  font-size: 16px;
+  flex:absolute;
+}
